[package]
name = "pumas-dot-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
lambda_http = "0.8.0"
lambda_runtime = "0.8.0"
serde = "1.0.162"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["tokio-sync"]